# VertexGenAIEvaluation

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  vertexgenaieval-0.0.1-py3-none-any.whl
notebooks/: run-eval-examples.ipynb
src/vertexgenaieval/classes/: data.py  evaluators.py  models.py
src/vertexgenaieval/scripts/: main.py
tests/: classification_sample.csv  extraction_sample.csv  summarization_sample.jsonl  tests.py
