[metadata]
name = vertexgenaieval 
version = 1.0
author = Felipe Castrillon
author_email = fcastrillon@google.com
description = A small example package for Melbourne housing data set
long_description = file: README.md
long_description_content_type = text/markdown
url = 
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE.txt

[options]
package_dir=
    =src
packages=find:

[options.packages.find]
where=src
